Misc logging fixes