@@ -293,7 +293,10 @@ fun TaskContainer.registerRunTask(
         languageVersion.set(JavaLanguageVersion.of(25))
         vendor.set(JvmVendorSpec.JETBRAINS)
     })
-    jvmArgs("-XX:+AllowEnhancedClassRedefinition")
+    jvmArgs(
+        "-XX:+AllowEnhancedClassRedefinition",
+        "--enable-native-access=ALL-UNNAMED",
+    )
 
     if (rootProject.childProjects["test-plugin"] != null) {
         val testPluginJar = rootProject.project(":test-plugin").tasks.jar.flatMap { it.archiveFile }
